--- a/style.css
+++ b/style.css
@@ -1,145 +1,152 @@
-
 body {
-    background-color: rgb(36, 36, 36);
+  background-color: rgb(36, 36, 36);
 }
 
 /* card */
 
 .filmCard {
-    border-radius: 10px;
-    min-width: 228px;
-    transition: 0.3s;
-    padding: 0;
+  border-radius: 10px;
+  min-width: 228px;
+  transition: 0.3s;
+  padding: 0;
+  position: relative;
 }
 
 .filmInfo {
-    background-color: rgb(36, 36, 36);
-    padding: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    display: none;
+  background-color: rgb(36, 36, 36);
+  padding: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 100%;
 }
 
 .filmInfo ion-icon {
-    color: white;
-    padding: 10px;
-    border: 2px solid rgb(161, 161, 161);
-    border-radius: 50%;
+  color: white;
+  padding: 10px;
+  border: 2px solid rgb(161, 161, 161);
+  border-radius: 50%;
 }
 
 #play {
-    color: black;
-    background-color: white;
+  color: black;
+  background-color: white;
 }
 
 .filmDescription p {
-    color: rgb(161, 161, 161);
+  color: rgb(161, 161, 161);
 }
 
 .genre {
-    color: white;
+  color: white;
 }
 
 /* card hover */
 
 .filmCard:hover img {
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .filmCard:hover .filmInfo {
-    display: block;
+  display: block;
 }
 
 .filmCard:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-box-shadow: 2px 2px 15px 5px #101010;
+  box-shadow: 2px 2px 15px 5px #101010;
+  z-index: 2;
 }
 
 /* navbar */
 
 .navbar {
-    background-color: rgb(36, 36, 36)!important;
+  background-color: rgb(36, 36, 36) !important;
 }
 
 #netflixLogo {
-    width: 100px
+  width: 100px;
 }
 
 .nav-link {
- --bs-nav-link-color: white;
- --bs-nav-link-hover-color: rgb(161, 161, 161);
- --bs-navbar-active-color: rgb(161, 161, 161);
+  --bs-nav-link-color: white;
+  --bs-nav-link-hover-color: rgb(161, 161, 161);
+  --bs-navbar-active-color: rgb(161, 161, 161);
 }
 
 .sideNav ion-icon {
-    color: white;
-    font-size: 18px;
+  color: white;
+  font-size: 18px;
 }
 
 .sideNav p {
-    color: white;
-    font-size: 12px;
+  color: white;
+  font-size: 12px;
 }
 
 #navbarNav {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 #toggleMenu {
-    color: white;
+  color: white;
 }
 
 /* carousel */
 
 h2 {
-    color: white;
-    width: 90%;
-    margin: auto;
-    padding-bottom: 10px;
+  color: white;
+  width: 90%;
+  margin: auto;
+  padding-bottom: 10px;
 }
 
 .carousel-inner {
-    width: 90%;
-    margin: auto;
-    overflow: visible;
+  width: 90%;
+  margin: auto;
+  overflow: visible;
 }
 
-.carousel-control-prev, .carousel-control-next {
-    width: 60px;
+.carousel-control-prev,
+.carousel-control-next {
+  width: 60px;
 }
 
 .row {
-    justify-content: center;
+  justify-content: center;
 }
 
 /* media query responsive*/
 
 @media screen and (max-width: 1491px) {
-    .filmCard:nth-child(6) {
-        display: none!important;
-    }
+  .filmCard:nth-child(6) {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 1238px) {
-    .filmCard:nth-child(5) {
-        display: none!important;
-    }
+  .filmCard:nth-child(5) {
+    display: none !important;
+  }
 }
 
-@media screen and (max-width: 985px) {
-    .filmCard:nth-child(4) {
-        display: none!important;
-    }
+@media screen and (max-width: 987px) {
+  .filmCard:nth-child(4) {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 732px) {
-    .filmCard:nth-child(3) {
-        display: none!important;
-    }
+  .filmCard:nth-child(3) {
+    display: none !important;
+  }
 }
 
-@media screen and (max-width: 479px) {
-    .filmCard:nth-child(2) {
-        display: none!important;
-    }
+@media screen and (max-width: 480px) {
+  .filmCard:nth-child(2) {
+    display: none !important;
+  }
 }
