--- a/style.css
+++ b/style.css
@@ -340,18 +340,18 @@ footer {
   background: rgb(0, 0, 0);
   background: -moz-linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(36, 36, 36, 0.5) 100%
+    rgba(0, 0, 0) 0%,
+    rgba(36, 36, 36) 100%
   );
   background: -webkit-linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(36, 36, 36, 0.5) 100%
+    rgba(0, 0, 0) 0%,
+    rgba(36, 36, 36) 100%
   );
   background: linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(36, 36, 36, 0.5) 100%
+    rgba(0, 0, 0) 0%,
+    rgba(36, 36, 36) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#363636",GradientType=1);
 }
